...
    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/what_if_full_logo"
        app:layout_constraintBottom_toTopOf="@id/enterName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="170dp"
        app:layout_constraintHeight_percent="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42"
...
        android:hint="Enter your name..."
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="@dimen/space_32"
        app:layout_constraintBottom_toTopOf="@id/create_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_logo"
        app:layout_constraintWidth_max="480dp"
        app:layout_constraintWidth_percent="0.72" />

    <TextView
        android:id="@+id/displayName"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
...
        style="@style/Widget.WhatIf.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_standard"
        android:layout_marginTop="@dimen/space_16"
        android:text="Create Game"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/joinGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterName"
        app:layout_constraintWidth_max="480dp"
        app:layout_constraintWidth_percent="0.72" />

...
