...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/create_game_title_top"
        app:layout_constraintWidth_max="360dp"
        app:layout_constraintWidth_percent="0.58" />

    <TextView
        android:id="@+id/replace"
        style="@style/RoomCodeText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_32"
        android:gravity="center_horizontal"
        android:text="REPLACE"
...
        android:id="@+id/createGame_back"
        style="@style/Widget.WhatIf.Button.Secondary"
        android:layout_width="140dp"
        android:layout_height="@dimen/button_height_hero"
        android:layout_marginTop="@dimen/space_48"
        android:text="back"
        app:layout_constraintEnd_toStartOf="@+id/createGame_start"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/replace" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/createGame_start"
...
