...
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/what_if_full_logo"
        app:layout_constraintBottom_toTopOf="@+id/accountPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="280dp"
        app:layout_constraintHeight_percent="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
...
        style="@style/Widget.WhatIf.Button.Primary"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height_hero"
        android:layout_marginTop="@dimen/space_32"
        android:text="Account Play"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/freePlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintWidth_max="350dp"
        app:layout_constraintWidth_percent="0.56" />

...
